--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <h1>The Camera Shop</h1>
+        <h3>What camera do you want</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
 
+      </div>
+    </div>
+  </div>
 
   <script src="app/main.js" type="module"></script>
 </body>
