added form and submit button

--- a/index.html
+++ b/index.html
@@ -13,14 +13,34 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col">
+      <div class="col text-center">
         <h1>The Camera Shop</h1>
         <h3>What camera do you want</h3>
       </div>
     </div>
     <div class="row">
       <div class="col">
-
+        <form>
+          <div class="row">
+            <div class="col">
+              <input type="text" class="form-control" id="type" placeholder="Camera type">
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" id="brand" placeholder="Camera brand">
+            </div>
+          </div>
+        </form>
+        <form>
+          <div class="row">
+            <div class="col">
+              <input type="text" class="form-control" id="model" placeholder="Camera model">
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" id="price" placeholder="Price">
+            </div>
+          </div>
+        </form>
+        <input class="btn btn-primary" type="submit" value="Submit">
       </div>
     </div>
   </div>
