--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
         </form>
         <form>
-          <div class="row">
+          <div class="row mt-5">
             <div class="col">
               <input type="text" class="form-control" id="model" placeholder="Camera model">
             </div>
@@ -40,7 +40,9 @@
             </div>
           </div>
         </form>
-        <input class="btn btn-primary" type="submit" value="Submit">
+        <div class="com">
+          <input class="btn btn-primary float-right mt-5" type="submit" value="Submit">
+        </div>
       </div>
     </div>
   </div>
